Fix font scaling down on iOS

--- a/_src/assets/_sass/base/_typography.scss
+++ b/_src/assets/_sass/base/_typography.scss
@@ -6,8 +6,7 @@
 html {
 
     font-size: 62.5%;
-    -webkit-text-size-adjust: 62.5%;
-    -ms-text-size-adjust: 62.5%;
+    line-height: 62.5%;
 
 }
 
